@@ -21,6 +21,7 @@
 #ifndef __BINARY_FILE_H
 #define __BINARY_FILE_H
 
+#include <fstream>
 #include <boost/iostreams/filtering_streambuf.hpp>
 #include <dolfin/common/types.h>
 #include "GenericFile.h"
@@ -42,7 +43,7 @@ namespace dolfin
   public:
 
     /// Constructor
-    BinaryFile(const std::string filename);
+    BinaryFile(const std::string filename, bool store_connectivity=false);
 
     /// Destructor
     virtual ~BinaryFile();
@@ -100,6 +101,9 @@ namespace dolfin
 
     // Write array (double)
     void write_array(uint n, const double* values);
+
+    // Store all connectivity in a mesh
+    bool _store_connectivity;
 
     // File for reading
     boost::iostreams::filtering_streambuf<boost::iostreams::input> ifilter;
